# Sound-Wave-Visualizer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/audio/: audio_capture.cpp  audio_capture.hpp  fft_processor.cpp  fft_processor.hpp
src/visualizer/: bar_visualizer.cpp  bar_visualizer.hpp
